--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/c.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/c.xhtml
@@ -13,7 +13,7 @@
 		<tr>
 			<td class="color-header" id="c3">#{i18n.getText('KAF022_149')}</td>
 			<td>
-				<div tabindex="1" data-bind="ntsRadioBoxGroup: {
+				<div id="c27" tabindex="1" data-bind="ntsRadioBoxGroup: {
 					options: itemListC27,
 					optionsValue: 'code',
 					optionsText: 'name',
@@ -35,9 +35,9 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="c5">#{i18n.getText('KAF022_151')}</td>
+			<td class="color-header c_radio" id="c5">#{i18n.getText('KAF022_151')}</td>
 			<td>
-				<div tabindex="3" data-bind="ntsRadioBoxGroup: {
+				<div id="c29" tabindex="3" data-bind="ntsRadioBoxGroup: {
 					options: itemListC29,
 					optionsValue: 'code',
 					optionsText: 'name',
@@ -47,9 +47,9 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="c6">#{i18n.getText('KAF022_152')}</td>
+			<td class="color-header c_radio" id="c6">#{i18n.getText('KAF022_152')}</td>
 			<td>
-				<div tabindex="4" data-bind="ntsRadioBoxGroup: {
+				<div id="c30" tabindex="4" data-bind="ntsRadioBoxGroup: {
 					options: itemListC30,
 					optionsValue: 'code',
 					optionsText: 'name',
@@ -59,9 +59,9 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="c7">#{i18n.getText('KAF022_153')}</td>
+			<td class="color-header c_radio" id="c7">#{i18n.getText('KAF022_153')}</td>
 			<td>
-				<div tabindex="5" data-bind="ntsRadioBoxGroup: {
+				<div id="c31" tabindex="5" data-bind="ntsRadioBoxGroup: {
 					options: itemListC30,
 					optionsValue: 'code',
 					optionsText: 'name',
@@ -71,9 +71,9 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="c8">#{i18n.getText('KAF022_154')}</td>
+			<td class="color-header c_radio" id="c8">#{i18n.getText('KAF022_154')}</td>
 			<td>
-				<div tabindex="6" data-bind="ntsRadioBoxGroup: {
+				<div id="c32" tabindex="6" data-bind="ntsRadioBoxGroup: {
 					options: itemListC30,
 					optionsValue: 'code',
 					optionsText: 'name',
@@ -315,9 +315,9 @@
 			</td>
 		</tr>
 		<tr>
-			<td class="color-header" id="c26">#{i18n.getText('KAF022_169')}</td>
+			<td class="color-header c_radio" id="c26">#{i18n.getText('KAF022_169')}</td>
 			<td>
-				<div tabindex="24" data-bind="ntsRadioBoxGroup: {
+				<div id="c49" tabindex="24" data-bind="ntsRadioBoxGroup: {
 					options: itemListC29,
 					optionsValue: 'code',
 					optionsText: 'name',
