--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/kaf022.a.main.css
@@ -104,3 +104,21 @@
 .viewmodel-a{
 	margin-bottom: 20px;
 }
+#c27 .ntsRadioBox span.label {
+	padding-right: 66px;
+}
+#c29 .ntsRadioBox span.label {
+	padding-right: 51px;
+}
+#c30 .ntsRadioBox span.label {
+	padding-right: 51px;
+}
+#c31 .ntsRadioBox span.label {
+	padding-right: 51px;
+}
+#c32 .ntsRadioBox span.label {
+	padding-right: 51px;
+}
+#c49 .ntsRadioBox span.label {
+	padding-right: 51px;
+}
